# kick-off-camp-presentation

./: README.md  pyproject.toml  wave.py
scripts/: fdm-errors.py  fem-errors.py  finite-difference.py  finite-element.py  wave.py
wave_solvers/: __init__.py  animators.py  solvers.py  utils.py
